--- a/templates/views/article_zero_trust_homelab.templ
+++ b/templates/views/article_zero_trust_homelab.templ
@@ -172,7 +172,7 @@ templ ArticleZeroTrustHomelab() {
                     </p>
 					<div class="my-0">
 						@code.Code(code.Props{
-							Language:       "hcl",
+							Language:       "go",
 							ShowCopyButton: true,
 							Size:           code.SizeFull,
 						}) {
@@ -217,7 +217,7 @@ templ ArticleZeroTrustHomelab() {
                     </p>
 					<div class="my-0">
 						@code.Code(code.Props{
-							Language:       "hcl",
+							Language:       "go",
 							ShowCopyButton: true,
 							Size:           code.SizeFull,
 						}) {
